<?xml version="1.0"?>
<package format="2">
    <name>cartographer_ros</name>
    <version>1.0.0</version>
    <description>
        Cartographer is a system that provides real-time simultaneous localization
        and mapping (SLAM) in 2D and 3D across multiple platforms and sensor
        configurations. This package provides Cartographer's ROS integration.
    </description>
    <maintainer email="william.ko@boeing.com">William Ko</maintainer>
    <author>Phillip Haeusler</author>
    <license>Boeing Proprietary</license>

    <url>https://github.com/googlecartographer/cartographer_ros</url>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>ninja-build</buildtool_depend>

    <build_depend>git</build_depend>
    <build_depend>google-mock</build_depend>
    <build_depend>python-sphinx</build_depend>

    <depend>cartographer_ros_msgs</depend>
    <depend>eigen_conversions</depend>
    <depend>geometry_msgs</depend>
    <depend>googletest</depend>
    <depend>libcairo2-dev</depend>
    <depend>libceres-dev</depend>
    <depend>libgflags-dev</depend>
    <depend>libgoogle-glog-dev</depend>
    <depend>libpcl-all-dev</depend>
    <depend>lua5.2-dev</depend>
    <depend>message_runtime</depend>
    <depend>nav_msgs</depend>
    <depend>ninja-build</depend>
    <depend>pcl_conversions</depend>
    <depend>pluginlib</depend>
    <depend>rosbag</depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>rviz</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_ros</depend>
    <depend>urdf</depend>
    <depend>visualization_msgs</depend>
    
    <test_depend>rosunit</test_depend>

    <export>
        <rviz plugin="${prefix}/rviz_plugin_description.xml"/>
    </export>
</package>
