<?xml version="1.0"?>
<package format="2">
    <name>modular_cartographer</name>
    <version>0.1.0</version>
    <description>cartographer_ros packages</description>
    <maintainer email="William.Ko@boeing.com">William Ko</maintainer>
    <author>Boeing</author>
    <license>Boeing Proprietary</license>


    <exec_depend>cartographer_ros</exec_depend>
    <exec_depend>cartographer_ros_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
